--- a/scss/layout/_layout-project.scss
+++ b/scss/layout/_layout-project.scss
@@ -99,6 +99,15 @@
 
 
 /**
+ * Dene
+ */
+ 
+.masthead--dene {
+	background: $black url(../img/interface/work/dene/masthead-bg.png) 0 0;
+}
+
+
+/**
  * Metropolis
  */
  
