--- a/css/main.css
+++ b/css/main.css
@@ -276,37 +276,37 @@ h6 {
   color: #0d0f0f;
   font-family: "ff-good-headline-web-pro-con", "Helvetica Neue", sans-serif;
   font-weight: normal;
-  line-height: .95;
+  line-height: .90;
   margin: 0 0 20px;
   text-transform: uppercase; }
 
 h1 {
-  font-size: 90px;
-  font-size: 9rem;
+  font-size: 80px;
+  font-size: 8rem;
   /* [1] */
   /* [2] */
   /* [3] */
   /* [4] */
   /* [5] */
   /* [6] */ }
-  @media (min-width: 48em) {
+  @media (min-width: 37.5em) {
     h1 {
       font-size: 100px;
       font-size: 10rem; } }
 
 h2 {
-  font-size: 65px;
-  font-size: 6.5rem;
+  font-size: 60px;
+  font-size: 6rem;
   /* [1] */
   /* [2] */
   /* [3] */
   /* [4] */
   /* [5] */
   /* [6] */ }
-  @media (min-width: 48em) {
+  @media (min-width: 37.5em) {
     h2 {
-      font-size: 75px;
-      font-size: 7.5rem; } }
+      font-size: 80px;
+      font-size: 8rem; } }
 
 h3 {
   font-size: 40px;
@@ -317,24 +317,24 @@ h3 {
   /* [4] */
   /* [5] */
   /* [6] */ }
-  @media (min-width: 48em) {
+  @media (min-width: 37.5em) {
     h3 {
-      font-size: 50px;
-      font-size: 5rem; } }
+      font-size: 60px;
+      font-size: 6rem; } }
 
 h4 {
-  font-size: 15px;
-  font-size: 1.5rem;
+  font-size: 20px;
+  font-size: 2rem;
   /* [1] */
   /* [2] */
   /* [3] */
   /* [4] */
   /* [5] */
   /* [6] */ }
-  @media (min-width: 48em) {
+  @media (min-width: 37.5em) {
     h4 {
-      font-size: 25px;
-      font-size: 2.5rem; } }
+      font-size: 40px;
+      font-size: 4rem; } }
 
 /* ==========================================================================
    #LISTS
@@ -754,7 +754,23 @@ blockquote {
 .page-head__home-link {
   border: none;
   display: block;
-  float: left; }
+  float: left;
+  fill: white; }
+
+.page-head__logo {
+  height: 75px;
+  transition: all .25s;
+  width: 75px;
+  /* [1] */
+  /* [2] */
+  /* [3] */
+  /* [4] */
+  /* [5] */
+  /* [6] */ }
+  @media (min-width: 48em) {
+    .page-head__logo {
+      height: 100px;
+      width: 100px; } }
 
 /* ==========================================================================
    #FOOTER
@@ -765,11 +781,11 @@ blockquote {
 .band {
   width: 100%; }
   .masthead + .band {
-    padding-top: 120px; }
+    padding-top: 80px; }
 
 .wrap {
   margin: 0 auto;
-  padding: 0 20px;
+  padding: 40px 20px 20px;
   max-width: 1200px; }
 
 .wrap--narrow {
@@ -831,6 +847,10 @@ blockquote {
     color: #0d0f0f; }
   .work__title a:hover, .work__title a:focus {
     color: #18acac; }
+
+.work__sub-title {
+  font-size: 25px;
+  font-size: 2.5rem; }
 
 .work__desc {
   box-sizing: border-box;
@@ -915,6 +935,12 @@ blockquote {
 .masthead--dartmoor {
   background: #3da0d3 url(../img/interface/work/dartmoor/masthead-bg.jpg) no-repeat center center;
   background-size: cover; }
+
+/**
+ * Dene
+ */
+.masthead--dene {
+  background: black url(../img/interface/work/dene/masthead-bg.png) 0 0; }
 
 /**
  * Metropolis
