--- a/scss/layout/_layout-index.scss
+++ b/scss/layout/_layout-index.scss
@@ -20,6 +20,22 @@
 /* ==========================================================================
    #INDEX
    ========================================================================== */
+   
+.work--alt {
+	
+	.work__item {
+		float: left;
+		width: 33.33333%;
+	}
+	
+	.work__image-link {
+		width: 100%;
+	}
+	
+	.work__desc {
+		display: none;
+	}
+}
 
 .work {
 	list-style: none;
