--- a/scss/layout/_layout-index.scss
+++ b/scss/layout/_layout-index.scss
@@ -37,6 +37,24 @@
 	}
 }
 
+.work--alt-2 {
+	max-width: 1800px !important;
+	
+	.work__item {
+		float: left;
+		width: 33.33333%;
+	}
+	
+	.work__image-link {
+		width: 100%;
+	}
+	
+	.work__desc {
+		display: none;
+	}
+}
+
+
 .work {
 	list-style: none;
 	margin: 0 auto;
