--- a/css/main.css
+++ b/css/main.css
@@ -39,12 +39,12 @@ article, aside, figure, footer, header, hgroup, nav, section {
  * Default anchor styling.
  */
 a {
-  border-bottom: 4px solid #88eeee;
-  color: #18acac;
+  border-bottom: 4px solid #b3eced;
+  color: #2dbec1;
   text-decoration: none;
   transition: all .25s; }
   a:visited {
-    color: #18acac; }
+    color: #2dbec1; }
   a:hover {
     color: black;
     text-decoration: none; }
@@ -539,7 +539,7 @@ blockquote {
     position: relative;
     text-indent: 4px; }
     blockquote > p:first-child:before, blockquote > p:last-of-type:after {
-      color: #18acac;
+      color: #2dbec1;
       content: "\201c";
       display: inline;
       font-size: 45px;
@@ -721,7 +721,7 @@ blockquote {
   user-select: none; }
 
 .pace-progress {
-  background: #18acac;
+  background: #2dbec1;
   height: 4px;
   position: fixed;
   top: 0;
@@ -864,7 +864,7 @@ blockquote {
   .work__title a:visited {
     color: #0d0f0f; }
   .work__title a:hover, .work__title a:focus {
-    color: #18acac; }
+    color: #2dbec1; }
 
 .work__sub-title {
   font-size: 25px;
