--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,7 @@
  * 5. $bp6  =  1220px 	(76.250rem)
  * 6. $bp7  =  1400px 	(87.5rem)
  */
+@import url(https://fonts.googleapis.com/css?family=Cabin);
 html, body, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, samp, small, strong, sub, sup, var, b, i, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, figure, footer, header, hgroup, menu, nav, section, time, mark, audio, video {
   margin: 0;
   padding: 0;
@@ -736,6 +737,168 @@ blockquote {
   opacity: 0;
   transition: all .10s; }
 
+/*
+p {
+  margin-top: 50px;
+  font-family: "Cabin", sans-serif;
+  letter-spacing: 12px;
+  text-indent: 12px;
+  color: $colorOutline;
+  animation: 
+    colorText $animDuration ease-out infinite,
+    nudgeText $animDuration ease-out infinite;
+}
+*/
+.mouse {
+  background: #4e5559 linear-gradient(transparent 0%, transparent 50%, #ffffff 50%, #ffffff 100%);
+  position: relative;
+  width: 25px;
+  height: 45px;
+  background-size: 100% 100%;
+  border-radius: 100px;
+  background-size: 225%;
+  position: relative;
+  z-index: 10;
+  margin: 0 auto 40px;
+  animation: colorSlide 5s linear infinite, nudgeMouse 5s ease-out infinite; }
+  .mouse:before, .mouse:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto; }
+  .mouse:before {
+    width: 21px;
+    height: 41px;
+    background-color: #0d0f0f;
+    border-radius: 100px; }
+  .mouse:after {
+    background-color: #ffffff;
+    width: 4px;
+    height: 4px;
+    border-radius: 100%;
+    animation: trackBallSlide 5s linear infinite; }
+
+@keyframes colorSlide {
+  0% {
+    background-position: 0% 100%; }
+  20% {
+    background-position: 0% 0%; }
+  21% {
+    background-color: #4e5559; }
+  29.99% {
+    background-color: #ffffff;
+    background-position: 0% 0%; }
+  30% {
+    background-color: #4e5559;
+    background-position: 0% 100%; }
+  50% {
+    background-position: 0% 0%; }
+  51% {
+    background-color: #4e5559; }
+  59.99% {
+    background-color: #ffffff;
+    background-position: 0% 0%; }
+  60% {
+    background-color: #4e5559;
+    background-position: 0% 100%; }
+  80% {
+    background-position: 0% 0%; }
+  81% {
+    background-color: #4e5559; }
+  89.99%, 100% {
+    background-color: #ffffff; } }
+@keyframes trackBallSlide {
+  0% {
+    opacity: 1;
+    transform: scale(1) translateY(-10px); }
+  6% {
+    opacity: 1;
+    transform: scale(0.9) translateY(2.5px); }
+  14% {
+    opacity: 0;
+    transform: scale(0.5) translateY(20px); }
+  15%, 19% {
+    opacity: 0;
+    transform: scale(0.5) translateY(-10px); }
+  28%, 29.99% {
+    opacity: 1;
+    transform: scale(1) translateY(-10px); }
+  30% {
+    opacity: 1;
+    transform: scale(1) translateY(-10px); }
+  36% {
+    opacity: 1;
+    transform: scale(0.9) translateY(2.5px); }
+  44% {
+    opacity: 0;
+    transform: scale(0.5) translateY(20px); }
+  45%, 49% {
+    opacity: 0;
+    transform: scale(0.5) translateY(-10px); }
+  58%, 59.99% {
+    opacity: 1;
+    transform: scale(1) translateY(-10px); }
+  60% {
+    opacity: 1;
+    transform: scale(1) translateY(-10px); }
+  66% {
+    opacity: 1;
+    transform: scale(0.9) translateY(2.5px); }
+  74% {
+    opacity: 0;
+    transform: scale(0.5) translateY(20px); }
+  75%, 79% {
+    opacity: 0;
+    transform: scale(0.5) translateY(-10px); }
+  88%, 100% {
+    opacity: 1;
+    transform: scale(1) translateY(-10px); } }
+@keyframes nudgeMouse {
+  0% {
+    transform: translateY(0); }
+  20% {
+    transform: translateY(10px); }
+  30% {
+    transform: translateY(0); }
+  50% {
+    transform: translateY(10px); }
+  60% {
+    transform: translateY(0); }
+  80% {
+    transform: translateY(10px); }
+  90% {
+    transform: translateY(0); } }
+@keyframes nudgeText {
+  0% {
+    transform: translateY(0); }
+  20% {
+    transform: translateY(2px); }
+  30% {
+    transform: translateY(0); }
+  50% {
+    transform: translateY(2px); }
+  60% {
+    transform: translateY(0); }
+  80% {
+    transform: translateY(2px); }
+  90% {
+    transform: translateY(0); } }
+@keyframes colorText {
+  21% {
+    color: #4e5559; }
+  30% {
+    color: #ffffff; }
+  51% {
+    color: #4e5559; }
+  60% {
+    color: #ffffff; }
+  81% {
+    color: #4e5559; }
+  90% {
+    color: #ffffff; } }
 /* ==========================================================================
    #SITE-HEAD
    ========================================================================== */
@@ -816,10 +979,10 @@ blockquote {
   list-style: none;
   margin: 0 auto;
   padding: 0;
-  max-width: 1200px; }
+  width: 100%; }
 
 .work__item {
-  margin: 0 auto;
+  margin: 0 auto 20px;
   padding: 0;
   width: 100%;
   max-width: 600px;
@@ -838,7 +1001,9 @@ blockquote {
     .work__item {
       display: flex;
       align-items: center;
-      max-width: none; } }
+      max-width: none; }
+      .work__item:nth-child(even) {
+        flex-direction: row-reverse; } }
 
 .work__image-link {
   border: none;
@@ -903,6 +1068,21 @@ blockquote {
 .masthead__image {
   display: block;
   margin: 0 auto -100px; }
+
+.masthead--home {
+  background: #0d0f0f;
+  color: #b1b6b7; }
+  .masthead--home .masthead__wrap {
+    padding: 20px 0 80px; }
+  .masthead--home h1,
+  .masthead--home h2,
+  .masthead--home h3,
+  .masthead--home h4 {
+    color: white; }
+  .masthead--home .lead {
+    color: #eef0f0; }
+  .masthead--home hr {
+    border-color: #2dbec1; }
 
 /**
  * Great British Meat Co.
